[package]
name = "won_staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "won_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"]}
anchor-spl = "0.24.2"
solana-program = "1.9.16"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
